# Hello-Scan-Code

./: .coverage  .gitignore  Makefile  PYINSTALLER_GUIDE.md  README.md  config.json  config_migration.py  main.py  pyproject.toml  run_main.py  test_basic_functionality.py  test_config_system.py  test_database_optimization.py  test_functionality.py  test_integration.py  test_new_architecture.py  test_packaging.py  validate_optimization.py  verify_project.py
.qoder/quests/: code-structure-optimization.md  database-operation-optimization.md  pyinstall-packaging-support.md
config/: config.schema.json  config.template.json  default.json  example.json
db/: results.db  results.db_backup_20250927_125554  results.db_backup_20250927_221009
docs/: DATABASE_OPTIMIZATION_SUMMARY.md  PYINSTALLER_GUIDE.md  README.md  architecture-overview.md  refactor.md
docs/specifications/: api-specification.md  data-models.md  design-patterns.md
docs/views/: development-view.md  logical-view.md  physical-view.md  process-view.md  use-case-view.md
scripts/: build_linux.py  build_windows.py  config.json
src/: __init__.py  code_searcher.py  config.py  database.py  exporter.py  logger_config.py  main.py  search_factory.py  search_template.py  searcher.py  strategies.py  validators.py
src/config/: __init__.py  app_config.py  base_config.py  config_loader.py  config_manager.py  config_validator.py  database_config.py  default_config.py  json_config_adapter.py  json_config_loader.py  logger_config.py
src/database/: __init__.py  models.py  (+4 more)
tests/: conftest.py  run_tests.py  test_all.py
(+111 files in other folders)
